force-app/main/default/objects/Employee_CTC__c/Employee_CTC__c.object-meta.xml
<CustomObject>
    <label>Employee CTC</label>
    <nameField>
        <displayFormat>CTC-{0000}</displayFormat>
        <label>Employee CTC Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee CTC</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>