force-app/main/default/objects/Employee_CTC__c/fields/Annual_CTC__c.field-meta.xml
<CustomField>
    <fullName>Annual_CTC__c</fullName>
    <label>Annual CTC</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>