force-app/main/default/objects/Employee_CTC__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees CTC</relationshipLabel>
    <relationshipName>Employees_CTC</relationshipName>
    <type>Lookup</type>
</CustomField>