force-app/main/default/objects/Employee_CTC__c/fields/Employer_EPF__c.field-meta.xml
<CustomField>
    <fullName>Employer_EPF__c</fullName>
    <formula>IF( Basic_Salary__c  &lt;= 15000,  Basic_Salary__c *0.12, 1800)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer EPF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>