force-app/main/default/objects/Employee_CTC__c/fields/EPF__c.field-meta.xml
<CustomField>
    <fullName>EPF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EPF?</label>
    <type>Checkbox</type>
</CustomField>