force-app/main/default/objects/Employee_CTC__c/fields/ESIC__c.field-meta.xml
<CustomField>
    <fullName>ESIC__c</fullName>
    <formula>Basic_Salary__c * 0.02</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ESIC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>