force-app/main/default/objects/Employee_CTC__c/fields/Gratuity__c.field-meta.xml
<CustomField>
    <fullName>Gratuity__c</fullName>
    <formula>Basic_Salary__c *0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gratuity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>