force-app/main/default/objects/Employee_CTC__c/fields/Gross_Salary__c.field-meta.xml
<CustomField>
    <fullName>Gross_Salary__c</fullName>
    <formula>Basic_Salary__c +  HRA__c + Internet_Allowance__c +  Travel_Allowance__c + Special_Allowance__c + Medical_Allowance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>