force-app/main/default/objects/Employee_CTC__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <defaultValue>3000</defaultValue>
    <label>HRA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>