force-app/main/default/objects/Employee_CTC__c/fields/Is_Revised__c.field-meta.xml
<CustomField>
    <fullName>Is_Revised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Revised</label>
    <type>Checkbox</type>
</CustomField>