force-app/main/default/objects/Employee_CTC__c/fields/Medical_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Allowance__c</fullName>
    <defaultValue>1500</defaultValue>
    <label>Medical Allowance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>