force-app/main/default/objects/Employee_CTC__c/fields/Total_A__c.field-meta.xml
<CustomField>
    <fullName>Total_A__c</fullName>
    <formula>Basic_Salary__c +  Internet_Allowance__c + Medical_Allowance__c + Travel_Allowance__c - Total_Deduction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Annual salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>