force-app/main/default/objects/Employee_CTC__c/fields/Total_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Total_Deduction__c</fullName>
    <formula>Gratuity__c + Professional_Tax__c + Employer_EPF__c + ESIC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>