force-app/main/default/objects/Employee_CTC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Total_A__c</columns>
    <columns>Basic_Salary__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>