force-app/main/default/objects/Employee_CTC__c/listViews/All_Active_Employee_CTC.listView-meta.xml
<ListView>
    <fullName>All_Active_Employee_CTC</fullName>
    <columns>Employee__c</columns>
    <columns>NAME</columns>
    <columns>Basic_Salary__c</columns>
    <columns>Annual_CTC__c</columns>
    <columns>Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Employee CTC</label>
</ListView>